fix navigation width on mobile

--- a/wp-content/themes/modern-journalist/sass/abstracts/_colors.scss
+++ b/wp-content/themes/modern-journalist/sass/abstracts/_colors.scss
@@ -38,4 +38,10 @@ $color__border-button-focus: #aaa #bbb #bbb;
 $color__border-input: #ccc;
 $color__border-abbr: #666;
 
+
+$light-gray: #00395a;
+$teal: #333;
+$dark-gray: #333;
+$white: #ffffff;
+
 //rgba(#fff, $opacity__slight)
