--- a/wp-content/themes/modern-journalist/sass/navigation/_menus.scss
+++ b/wp-content/themes/modern-journalist/sass/navigation/_menus.scss
@@ -183,11 +183,6 @@
   }
 }
 
-$light-gray: #00395a;
-$teal: #333;
-$dark-gray: #333;
-$white: #ffffff;
-
 .menu-toggle {
   position: relative;
 }
